# jira-client-async

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  pyproject.toml  tasks.py
docs/: CHANGELOG.md  INSTALL.md
invocations/: __init__.py  project.py  system.py  tests.py
src/sessions/: __init__.py  aiohttp_adapter.py  exceptions.py  utils.py
src/sessions/abstract/: __init__.py  response.py  session_adapter.py
src/sessions/aiohttp/: __init__.py  adapter.py  response.py
